# aws-cybersecurity-siem

./: .gitmodules  README.md  app.py  cdk.json  pyproject.toml
assets/imgs/: AWS_General_Architecture.excalidraw  AWS_SIEM_Architecture.excalidraw
cdk_backend/: backend_stack.py
cdk_backend/alb/: infrastructure.py
cdk_backend/asg/: infrastructure.py  user_data_script.sh  user_data_script_agents.sh  user_data_script_server.sh
cdk_backend/common/: constants.py
cdk_backend/nlb/: infrastructure.py
cdk_backend/security_groups/: infrastructure.py
cdk_backend/vpc/: infrastructure.py
cdk_backend/vpc_endpoints/: infrastructure.py
cdk_backend/vpc_flow_logs/: infrastructure.py
